@@ -1,37 +1,40 @@
 package com.seucorre.shared.api;
 
+import jakarta.validation.ConstraintViolationException;
 import com.seucorre.shared.exception.BusinessRuleException;
 import com.seucorre.shared.exception.EntityNotFoundException;
 import com.seucorre.shared.exception.IAUnavailableException;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.validation.FieldError;
-import org.springframework.web.bind.MethodArgumentNotValidException;
 import org.springframework.web.bind.annotation.ExceptionHandler;
 import org.springframework.web.bind.annotation.RestControllerAdvice;
+import org.springframework.web.bind.MethodArgumentNotValidException;
+import org.springframework.http.converter.HttpMessageNotReadableException;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @RestControllerAdvice
 public class GlobalExceptionHandler {
 
     @ExceptionHandler(BusinessRuleException.class)
     public ResponseEntity<ApiResponse<Void>> handleBusinessRuleException(BusinessRuleException ex) {
-        ApiResponse<Void> response = ApiResponse.erro(ex.getMessage());
-        return ResponseEntity.status(HttpStatus.BAD_REQUEST).body(response);
+        return buildErrorResponse(HttpStatus.BAD_REQUEST, ex.getMessage());
     }
 
     @ExceptionHandler(EntityNotFoundException.class)
     public ResponseEntity<ApiResponse<Void>> handleEntityNotFoundException(EntityNotFoundException ex) {
-        ApiResponse<Void> response = ApiResponse.erro(ex.getMessage());
-        return ResponseEntity.status(HttpStatus.NOT_FOUND).body(response);
+        return buildErrorResponse(HttpStatus.NOT_FOUND, ex.getMessage());
     }
 
     @ExceptionHandler(IAUnavailableException.class)
     public ResponseEntity<ApiResponse<Void>> handleIAUnavailableException(IAUnavailableException ex) {
-        ApiResponse<Void> response = ApiResponse.erro("Serviço de IA temporariamente indisponível. Tente novamente mais tarde.");
-        return ResponseEntity.status(HttpStatus.SERVICE_UNAVAILABLE).body(response);
+        return buildErrorResponse(HttpStatus.SERVICE_UNAVAILABLE, "Serviço de IA temporariamente indisponível. Tente novamente mais tarde.");
+    }
+
+    @ExceptionHandler(IllegalArgumentException.class)
+    public ResponseEntity<ApiResponse<Void>> handleIllegalArgumentException(IllegalArgumentException ex) {
+        return buildErrorResponse(HttpStatus.BAD_REQUEST, ex.getMessage());
     }
 
     @ExceptionHandler(MethodArgumentNotValidException.class)
@@ -39,16 +42,44 @@ public class GlobalExceptionHandler {
         List<String> erros = ex.getBindingResult()
                 .getFieldErrors()
                 .stream()
-                .map(FieldError::getDefaultMessage)
-                .collect(Collectors.toList());
+                .map(fieldError -> resolveValidationMessage(fieldError))
+                .toList();
 
-        ApiResponse<Void> response = ApiResponse.erro("Erro de validação nos campos", erros);
-        return ResponseEntity.status(HttpStatus.BAD_REQUEST).body(response);
+        return buildErrorResponse(HttpStatus.BAD_REQUEST, "Erro de validação nos campos", erros);
+    }
+
+    @ExceptionHandler(ConstraintViolationException.class)
+    public ResponseEntity<ApiResponse<Void>> handleConstraintViolationException(ConstraintViolationException ex) {
+        List<String> erros = ex.getConstraintViolations().stream()
+                .map(violation -> violation.getMessage())
+                .filter(message -> message != null && !message.isBlank())
+                .toList();
+
+        return buildErrorResponse(HttpStatus.BAD_REQUEST, "Erro de validação nos parâmetros", erros);
+    }
+
+    @ExceptionHandler(HttpMessageNotReadableException.class)
+    public ResponseEntity<ApiResponse<Void>> handleHttpMessageNotReadableException(HttpMessageNotReadableException ex) {
+        return buildErrorResponse(HttpStatus.BAD_REQUEST, "Corpo da requisição inválido ou malformado.");
     }
 
     @ExceptionHandler(Exception.class)
     public ResponseEntity<ApiResponse<Void>> handleException(Exception ex) {
-        ApiResponse<Void> response = ApiResponse.erro("Erro interno no servidor: " + ex.getMessage());
-        return ResponseEntity.status(HttpStatus.INTERNAL_SERVER_ERROR).body(response);
+        return buildErrorResponse(HttpStatus.INTERNAL_SERVER_ERROR, "Erro interno no servidor.");
+    }
+
+    private ResponseEntity<ApiResponse<Void>> buildErrorResponse(HttpStatus status, String message) {
+        return ResponseEntity.status(status).body(ApiResponse.erro(message));
+    }
+
+    private ResponseEntity<ApiResponse<Void>> buildErrorResponse(HttpStatus status, String message, List<String> errors) {
+        return ResponseEntity.status(status).body(ApiResponse.erro(message, errors == null || errors.isEmpty() ? null : errors));
+    }
+
+    private String resolveValidationMessage(FieldError fieldError) {
+        if (fieldError.getDefaultMessage() != null && !fieldError.getDefaultMessage().isBlank()) {
+            return fieldError.getDefaultMessage();
+        }
+        return "Campo inválido: " + fieldError.getField();
     }
 }
